fixed groups scrollbar

--- a/src/main/resources/static/css/groups.css
+++ b/src/main/resources/static/css/groups.css
@@ -172,3 +172,23 @@ h5 {
     height: calc(99% - 42px); /* Subtract the height of the .middle-top-bar */
     overflow-y: auto;
 }
+
+
+.groups-scrollable::-webkit-scrollbar{
+    width: 10px; /* Width of the scrollbar track */
+    background-color: transparent; /* Track color */
+    border-radius: 0 20px 20px 0; /* top-left, top-right, bottom-right, bottom-left */
+    /*border: #708090 solid 2px;*/
+}
+
+
+.groups-scrollable::-webkit-scrollbar-thumb{
+    background-color: #8e09e7; /* Thumb color */
+    border-radius: 8px; /* top-left, top-right, bottom-right, bottom-left */
+    height: 15px !important;
+}
+
+
+.groups-scrollable::-webkit-scrollbar-thumb:hover{
+    background-color: #ffb74d; /* Thumb color on hover */
+}
